<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="actual">Actual</string>
    <string name="advanced">Advanced</string>
    <string name="app_name">Color Blind Pal</string>
    <string name="b_letter">B</string>
    <string name="black_display">Black</string>
    <string name="black_value">black</string>
    <string name="blue_display">Blue</string>
    <string name="blue_value">blue</string>
    <string name="cobalt_display">Cobalt</string>
    <string name="cobalt_value">cobalt</string>
    <string name="colloquial_display">Colloquial</string>
    <string name="colloquial_value">colloquial</string>
    <string name="common_display">Common</string>
    <string name="common_value">common</string>
    <string name="crimson_display">Crimson</string>
    <string name="crimson_value">crimson</string>
    <string name="cyan_display">Cyan</string>
    <string name="cyan_value">cyan</string>
    <string name="deuteranomaly_simulation_display">Simulate deuteranomaly</string>
    <string name="deuteranomaly_simulation_value">deuteranomaly_simulate</string>
    <string name="deuteranopia_display">Deuteranopia (green deficiency)</string>
    <string name="deuteranopia_simulation_display">Simulate deuteranopia</string>
    <string name="deuteranopia_simulation_value">deuteranopia_simulate</string>
    <string name="deuteranopia_value">deuteranopia</string>
    <string name="eighty_percent_display">80%</string>
    <string name="eighty_percent_value">eighty_percent</string>
    <string name="empty_string" />
    <string name="fade">Fade</string>
    <string name="fifty_percent_display">50%</string>
    <string name="fifty_percent_value">fifty_percent</string>
    <string name="filter">Filter</string>
    <string name="filtering_colors">Filtering Colors</string>
    <string name="forty_percent_display">40%</string>
    <string name="forty_percent_value">forty_percent</string>
    <string name="freeze">Freeze</string>
    <string name="g_letter">G</string>
    <string name="green_display">Green</string>
    <string name="green_value">green</string>
    <string name="h_letter">H</string>
    <string name="h_placeholder">360</string>
    <string name="hide_contentdescription">Show or Hide Tools</string>
    <string name="highlight">Highlight</string>
    <string name="highquality_display">High</string>
    <string name="highquality_value">high_quality</string>
    <string name="hue_range">Hue range</string>
    <string name="hundred_percent_display">100%</string>
    <string name="hundred_percent_value">hundred_percent</string>
    <string name="info_button">ⓘ</string>
    <string name="inspecting_color">Inspecting Color</string>
    <string name="large_display">Large</string>
    <string name="large_value">large</string>
    <string name="lime_display">Lime</string>
    <string name="lime_value">lime</string>
    <string name="lowquality_display">Low</string>
    <string name="lowquality_value">low_quality</string>
    <string name="magenta_display">Magenta</string>
    <string name="magenta_value">magenta</string>
    <string name="medium_display">Medium</string>
    <string name="medium_value">medium</string>
    <string name="medquality_display">Medium</string>
    <string name="medquality_value">med_quality</string>
    <string name="ninety_percent_display">90%</string>
    <string name="ninety_percent_value">ninety_percent</string>
    <string name="no_camera_error_message">Sorry, we don\'t currently support devices without a camera. Check back later to load images from your gallery!</string>
    <string name="no_camera_error_positivebutton">OK</string>
    <string name="no_camera_error_title">No camera detected</string>
    <string name="normal_vision_display">Normal vision</string>
    <string name="normal_vision_value">normal_vision</string>
    <string name="not_applicable">N/A</string>
    <string name="orange_display">Orange</string>
    <string name="orange_value">orange</string>
    <string name="placeholder_color_name">(Color Name)</string>
    <string name="pref_about_display">How to use this app</string>
    <string name="pref_about_message">Thank you for downloading Color Blind Pal! Here\'s some detailed information on how to use all the features of this app. \10\10Press the \"Inspecting Color\" title at the top to switch from the Color Inspector to the Color Filter. Press the eye icon to hide the other buttons. Press the Freeze button to freeze the camera. Press the \"ⓘ\" icon to open the Settings. \10\10Use the Color Inspector to see what color something is. \10The color name is shown at the bottom of the screen, above a rectangle that shows the selected color. The slider shows where the selected color lies on the color spectrum. You can press the Advanced button to see the color\'s saturation and value (lightness). When the camera is frozen, you can press anywhere on the screen to move the crosshair. \10\10Use the Color Filter to see colors more clearly. \10The rectangle above the color spectrum shows the output of the selected filter. \10Press the Shift button to shift hues away from colors that are hard to distinguish toward colors that are easier to distinguish - make sure to set your color blindness type in the Settings! \10Press the Stripes button to overlay a striped pattern on yellow, orange, red, and purple. \10Press the Filter button to show a single color, which you select by dragging the slider. Everything will be grayscale except the selected color, which you can Highlight or Fade out under the Advanced button. You can increase the range of hues selected by dragging the hue range slider, and you can select a color on the screen by pressing the color name below the color spectrum and then pressing anywhere on the screen. \10\10Customize your experience in the Settings menu. \10Set your color blindness type (or the type of color blindness you want to simulate) for the Color Filter\'s Shift feature. Choose a color name pack for the Color Inspector. Set the camera quality, but note that high-resolution will be slower. Increase the Color Inspector\'s sample size for a more consistent color, and show color codes to see the selected color\'s RGB and HSV values. Change the Color Filter\'s highlight color and the minimum saturation required for a color to be selected. Change the hue around which Stripes are drawn in the Color Filter. \10\10To view our privacy policy, visit colorblindpal.com/privacy. \10\10We hope Color Blind Pal helps you! If you have any comments or questions, please send us an email at support@colorblindpal.com. If you like the app, make sure to rate us on Google Play and tell your friends!</string>
    <string name="pref_about_title">About Color Blind Pal</string>
    <string name="pref_cameraquality_defaultvalue">@string/lowquality_value</string>
    <string name="pref_cameraquality_dialogtitle">What camera resolution do you want to use?</string>
    <string name="pref_cameraquality_display">Camera quality</string>
    <string name="pref_colorblindnesstype_defaultvalue">@string/protanopia_value</string>
    <string name="pref_colorblindnesstype_dialogtitle">What type of color blindness do you have?</string>
    <string name="pref_colorblindnesstype_display">Color blindness type</string>
    <string name="pref_colorfilter_title">Color Filter</string>
    <string name="pref_colorinspector_title">Color Inspector</string>
    <string name="pref_colornamepack_defaultvalue">@string/common_value</string>
    <string name="pref_colornamepack_dialogtitle">What kind of color names do you want?</string>
    <string name="pref_colornamepack_display">Color name pack</string>
    <string name="pref_developercolors_display">Show color codes</string>
    <string name="pref_developercolors_summary">Show RGB and HSV values</string>
    <string name="pref_general_title">General</string>
    <string name="pref_highlightcolor_defaultvalue">@string/cobalt_value</string>
    <string name="pref_highlightcolor_dialogtitle">What color do you want to use to show the selected hue?</string>
    <string name="pref_highlightcolor_display">Highlight color</string>
    <string name="pref_key_about">pref_key_about</string>
    <string name="pref_key_cameraquality">pref_key_cameraquality</string>
    <string name="pref_key_colorblindnesstype">pref_key_colorblindnesstype</string>
    <string name="pref_key_colorfilter_category">pref_key_colorfilter_category</string>
    <string name="pref_key_colorinspector_category">pref_key_colorinspector_category</string>
    <string name="pref_key_colornamepack">pref_key_colornamepack</string>
    <string name="pref_key_developercolors">pref_key_developercolors</string>
    <string name="pref_key_general_category">pref_key_general_category</string>
    <string name="pref_key_highlightcolor">pref_key_highlightcolor</string>
    <string name="pref_key_minsaturation">pref_key_minsaturation</string>
    <string name="pref_key_samplesize">pref_key_samplesize</string>
    <string name="pref_key_settings_screen">pref_key_settings_screen</string>
    <string name="pref_key_stripehue">pref_key_stripehue</string>
    <string name="pref_minsaturation_defaultvalue">@string/ten_percent_value</string>
    <string name="pref_minsaturation_dialogtitle">What\'s the minimum saturation required to show a color?</string>
    <string name="pref_minsaturation_display">Minimum saturation</string>
    <string name="pref_samplesize_defaultvalue">@string/small_value</string>
    <string name="pref_samplesize_dialogtitle">How large of an area do you want to sample?</string>
    <string name="pref_samplesize_display">Sample size</string>
    <string name="pref_stripehue_defaultvalue">@string/red_value</string>
    <string name="pref_stripehue_dialogtitle">Around which color would you like to draw stripes?</string>
    <string name="pref_stripehue_display">Stripes hue</string>
    <string name="protanomaly_simulation_display">Simulate protanomaly</string>
    <string name="protanomaly_simulation_value">protanomaly_simulate</string>
    <string name="protanopia_display">Protanopia (red deficiency)</string>
    <string name="r_letter">R</string>
    <string name="rgb_placeholder">255</string>
    <string name="s_letter">S</string>
    <string name="saturation">Saturation</string>
    <string name="select_hue">Select hue</string>
    <string name="shift">Shift</string>
    <string name="stripes">Stripes</string>
    <string name="sv_placeholder">100</string>
    <string name="v_letter">V</string>
    <string name="value">Value</string>
</resources>