<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:background="@color/black" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextureView android:id="@+id/camera_textureview_preview" android:layout_width="match_parent" android:layout_height="match_parent"/>
    <ImageView android:id="@+id/camera_imageview_output" android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="fitXY"/>
    <ImageView android:layout_gravity="center" android:id="@+id/camera_imageview_crosshair" android:layout_width="192dp" android:layout_height="192dp" android:src="@drawable/crosshair" android:scaleType="fitXY"/>
    <FrameLayout android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent">
        <RelativeLayout android:layout_gravity="top|center_vertical|center_horizontal|center" android:orientation="horizontal" android:id="@+id/camera_relativelayout_colorwindowcontainer" android:background="@color/transparent" android:layout_width="match_parent" android:layout_height="match_parent" style="?attr/metaButtonBarStyle">
            <View android:id="@+id/camera_view_bottomblackbarcolorwindow" android:background="@color/black_overlay" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignTop="@+id/camera_linearlayout_globalfilterscontainer" android:layout_alignParentBottom="true"/>
            <LinearLayout android:gravity="center" android:id="@+id/camera_linearlayout_globalfilterscontainer" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_above="@+id/camera_relativelayout_hueselectorcontainer" android:layout_centerHorizontal="true">
                <com.colorblindpal.colorblindpal.CameraToggleButton android:id="@+id/camera_togglebutton_showstripes" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:textOn="@string/stripes" android:textOff="@string/stripes" android:text="@string/stripes" style="@style/ColorBlindPalCameraToggleButtonText"/>
                <com.colorblindpal.colorblindpal.CameraToggleButton android:id="@+id/camera_togglebutton_showfilter" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:textOn="@string/filter" android:textOff="@string/filter" android:text="@string/filter" style="@style/ColorBlindPalCameraToggleButtonText"/>
                <com.colorblindpal.colorblindpal.CameraToggleButton android:id="@+id/camera_togglebutton_shiftspectrum" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:textOn="@string/shift" android:textOff="@string/shift" android:text="@string/shift" style="@style/ColorBlindPalCameraToggleButtonText"/>
            </LinearLayout>
            <com.colorblindpal.colorblindpal.CameraToggleButton android:id="@+id/camera_button_selectcolor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@string/select_hue" android:textOff="@string/select_hue" android:text="@string/select_hue" android:layout_alignParentBottom="true" android:layout_centerInParent="true" style="@style/ColorBlindPalCameraToggleButtonText"/>
            <com.colorblindpal.colorblindpal.CameraToggleButton android:id="@+id/camera_togglebutton_actualcolors" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@string/actual" android:textOff="@string/actual" android:text="@string/actual" android:layout_alignParentBottom="true" android:layout_alignParentStart="true" style="@style/ColorBlindPalCameraToggleButtonText"/>
            <RelativeLayout android:layout_gravity="center" android:id="@+id/camera_relativelayout_hueselectorcontainer" android:layout_width="match_parent" android:layout_height="30dp" android:layout_marginBottom="51dp" android:layout_alignParentBottom="true">
                <ImageView android:id="@+id/camera_imageview_preview" android:layout_width="match_parent" android:layout_height="15dp" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:src="@drawable/rainbow" android:scaleType="fitXY" android:layout_alignParentTop="true"/>
                <ImageView android:id="@+id/camera_imageview_previewinput" android:layout_width="match_parent" android:layout_height="15dp" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:src="@drawable/rainbow" android:scaleType="fitXY" android:layout_alignParentBottom="true"/>
                <View android:id="@+id/camera_view_hueselectorbar" android:background="@color/slider_light_gray" android:layout_width="match_parent" android:layout_height="3dp" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_centerVertical="true"/>
                <SeekBar android:id="@+id/camera_seekbar_hueselector" android:background="@null" android:layout_width="match_parent" android:layout_height="wrap_content" android:max="360" android:progressDrawable="@color/transparent" android:layout_centerVertical="true"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout android:layout_gravity="top|center_vertical|center_horizontal|center" android:orientation="horizontal" android:id="@+id/camera_relativelayout_colorselectorcontainer" android:background="@color/transparent" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="match_parent" style="?attr/metaButtonBarStyle">
            <View android:id="@+id/camera_view_bottomblackbarcolorselector" android:background="@color/black_overlay" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignTop="@+id/camera_textview_colordescription" android:layout_alignParentBottom="true"/>
            <TextView android:id="@+id/camera_textview_colordescription" android:paddingTop="6dp" android:paddingBottom="6dp" android:layout_width="match_parent" android:layout_height="33dp" android:text="@string/placeholder_color_name" android:layout_above="@+id/camera_relativelayout_colordescriptioncontainer" android:layout_centerHorizontal="true" style="@style/ColorBlindPalCameraText"/>
            <RelativeLayout android:gravity="center" android:id="@+id/camera_relativelayout_colordescriptioncontainer" android:layout_width="match_parent" android:layout_height="30dp" android:layout_marginBottom="51dp" android:layout_alignParentBottom="true">
                <View android:id="@+id/camera_view_selectedcolorbox" android:layout_width="match_parent" android:layout_height="15dp" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_alignParentTop="true"/>
                <ImageView android:layout_width="match_parent" android:layout_height="15dp" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:src="@drawable/rainbow" android:scaleType="fitXY" android:layout_alignParentBottom="true"/>
                <View android:background="@color/slider_light_gray" android:layout_width="match_parent" android:layout_height="3dp" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:layout_centerVertical="true"/>
                <SeekBar android:id="@+id/camera_seekbar_hue" android:layout_width="match_parent" android:layout_height="wrap_content" android:max="360" android:progressDrawable="@color/transparent" android:layout_centerVertical="true"/>
            </RelativeLayout>
            <RelativeLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@+id/camera_relativelayout_devcolors" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="7dp" android:layout_alignParentBottom="true" android:layout_marginStart="8dp" android:layout_alignParentStart="true">
                <LinearLayout android:orientation="horizontal" android:id="@+id/camera_linearlayout_rgb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentStart="true">
                    <LinearLayout android:orientation="vertical" android:layout_width="30dp" android:layout_height="match_parent">
                        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/r_letter" android:layout_weight="1" style="@style/ColorBlindPalCameraText"/>
                        <TextView android:id="@+id/camera_textview_red" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/rgb_placeholder" android:layout_weight="1" style="@style/ColorBlindPalCameraText"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:layout_width="30dp" android:layout_height="match_parent">
                        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/g_letter" android:layout_weight="1" style="@style/ColorBlindPalCameraText"/>
                        <TextView android:id="@+id/camera_textview_green" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/rgb_placeholder" android:layout_weight="1" style="@style/ColorBlindPalCameraText"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:layout_width="30dp" android:layout_height="match_parent">
                        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/b_letter" android:layout_weight="1" style="@style/ColorBlindPalCameraText"/>
                        <TextView android:id="@+id/camera_textview_blue" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/rgb_placeholder" android:layout_weight="1" style="@style/ColorBlindPalCameraText"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_marginStart="16dp" android:layout_toEndOf="@+id/camera_linearlayout_rgb">
                    <LinearLayout android:orientation="vertical" android:layout_width="30dp" android:layout_height="match_parent">
                        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/h_letter" android:layout_weight="1" style="@style/ColorBlindPalCameraText"/>
                        <TextView android:id="@+id/camera_textview_h" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/h_placeholder" android:layout_weight="1" style="@style/ColorBlindPalCameraText"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:layout_width="30dp" android:layout_height="match_parent">
                        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/s_letter" android:layout_weight="1" style="@style/ColorBlindPalCameraText"/>
                        <TextView android:id="@+id/camera_textview_s" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/sv_placeholder" android:layout_weight="1" style="@style/ColorBlindPalCameraText"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:layout_width="30dp" android:layout_height="match_parent">
                        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/v_letter" android:layout_weight="1" style="@style/ColorBlindPalCameraText"/>
                        <TextView android:id="@+id/camera_textview_v" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/sv_placeholder" android:layout_weight="1" style="@style/ColorBlindPalCameraText"/>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout android:layout_gravity="top|center_vertical|center_horizontal|center" android:orientation="horizontal" android:id="@+id/camera_relativelayout_sharedcontainer" android:background="@color/transparent" android:layout_width="match_parent" android:layout_height="wrap_content" style="?attr/metaButtonBarStyle">
            <View android:id="@+id/camera_view_topblackbarcolorselector" android:background="@color/black_overlay" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_above="@+id/camera_linearlayout_secondrowcolorselector" android:layout_alignParentTop="true"/>
            <View android:id="@+id/camera_view_topblackbarcolorwindow" android:background="@color/black_overlay" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_above="@+id/camera_linearlayout_secondrowcolorwindow" android:layout_alignParentTop="true"/>
            <com.colorblindpal.colorblindpal.CameraToggleImageButton android:layout_gravity="center" android:id="@+id/camera_button_hide" android:padding="24dp" android:layout_width="48dp" android:layout_height="48dp" android:src="@drawable/hide_button" android:layout_alignParentTop="true" android:contentDescription="@string/hide_contentdescription" android:layout_alignParentStart="true" style="@style/ColorBlindPalCameraToggleButton"/>
            <Button android:id="@+id/camera_button_info" android:layout_width="48dp" android:layout_height="48dp" android:text="@string/info_button" android:layout_alignParentTop="true" android:layout_toEndOf="@+id/camera_button_hide" style="@style/ColorBlindPalCameraInfoButton"/>
            <Button android:id="@+id/camera_button_colormode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/inspecting_color" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" style="@style/ColorBlindPalCameraTitleButton"/>
            <com.colorblindpal.colorblindpal.CameraToggleButton android:id="@+id/camera_togglebutton_colorwindowstools" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:textOn="@string/advanced" android:textOff="@string/advanced" android:text="@string/advanced" android:layout_alignParentTop="true" android:layout_alignParentEnd="true" style="@style/ColorBlindPalCameraToggleButtonText"/>
            <com.colorblindpal.colorblindpal.CameraToggleButton android:id="@+id/camera_togglebutton_colorselectortools" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:textOn="@string/advanced" android:textOff="@string/advanced" android:text="@string/advanced" android:layout_alignParentTop="true" android:layout_alignParentEnd="true" style="@style/ColorBlindPalCameraToggleButtonText"/>
            <LinearLayout android:orientation="vertical" android:id="@+id/camera_linearlayout_secondrowcolorselector" android:background="@color/black_overlay" android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/camera_button_colormode">
                <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <SeekBar android:id="@+id/camera_seekbar_saturation" android:layout_width="0dp" android:layout_height="wrap_content" android:max="100" android:layout_weight="1" style="@style/ColorBlindPalSeekBarDisabled"/>
                    <SeekBar android:id="@+id/camera_seekbar_value" android:layout_width="0dp" android:layout_height="wrap_content" android:max="100" android:layout_weight="1" style="@style/ColorBlindPalSeekBarDisabled"/>
                </LinearLayout>
                <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@+id/camera_linearlayout_thirdrow" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:id="@+id/camera_textview_saturation" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/saturation" android:layout_weight="1" style="@style/ColorBlindPalCameraText"/>
                    <TextView android:id="@+id/camera_textview_value" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginBottom="8dp" android:text="@string/value" android:layout_weight="1" style="@style/ColorBlindPalCameraText"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@+id/camera_linearlayout_secondrowcolorwindow" android:background="@color/black_overlay" android:paddingLeft="16dp" android:paddingRight="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/camera_button_colormode">
                <LinearLayout android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1">
                    <SeekBar android:id="@+id/camera_seekbar_huewidthselector" android:background="@null" android:layout_width="match_parent" android:layout_height="match_parent" android:max="180" style="@style/ColorBlindPalSeekBar"/>
                    <TextView android:id="@+id/camera_textview_huerange" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="8dp" android:text="@string/hue_range" style="@style/ColorBlindPalCameraText"/>
                </LinearLayout>
                <com.colorblindpal.colorblindpal.CameraToggleButton android:id="@+id/camera_togglebutton_customhighlightcolor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@string/highlight" android:textOff="@string/highlight" android:text="@string/highlight" style="@style/ColorBlindPalCameraToggleButtonText"/>
                <com.colorblindpal.colorblindpal.CameraToggleButton android:id="@+id/camera_togglebutton_fadehighlightbutton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" android:textOn="@string/fade" android:textOff="@string/fade" android:text="@string/fade" style="@style/ColorBlindPalCameraToggleButtonText"/>
            </LinearLayout>
            <com.colorblindpal.colorblindpal.CameraToggleButton android:id="@+id/camera_button_freezecamera" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@string/freeze" android:textOff="@string/freeze" android:text="@string/freeze" android:layout_alignBottom="@+id/camera_view_freezespacer" android:layout_alignParentEnd="true" style="@style/ColorBlindPalCameraToggleButtonText"/>
            <View android:id="@+id/camera_view_freezespacer" android:layout_width="0dp" android:layout_height="0dp" android:layout_alignParentBottom="true" android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </FrameLayout>
</FrameLayout>
